@@ -84,6 +84,18 @@ void basic_io::stanza::push_str_pair(std::string const & k, std::string const & 
     indent = k.size();
 }
 
+void basic_io::stanza::push_str_triple(std::string const & k, 
+				       std::string const & n,
+				       std::string const & v)
+{
+  for (std::string::const_iterator i = k.begin(); i != k.end(); ++i)
+    I(std::isalnum(*i) || *i == '_');
+
+  entries.push_back(std::make_pair(k, escape(n) + " " + escape(v)));
+  if (k.size() > indent)
+    indent = k.size();
+}
+
 
 basic_io::printer::printer(std::ostream & ost) 
   : empty_output(true), out(ost)
