@@ -1,3 +1,8 @@
+2005-07-23  graydon hoare  <graydon@pobox.com>
+
+	* basic_io.{cc,hh} (basic_io::stanza::push_str_triple): New method.
+	* cset.cc ({parse,print,read,write}_mfest): New methods.
+
 2005-07-18  graydon hoare  <graydon@pobox.com>
 
 	* cset.cc: More bugfixing, passes first unit test.
